--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quicklearn",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ilijapopovic.github.io/unbeatable-xo-ai/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
