--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "quicklearn",
+  "name": "unbeatable-xo-ai",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ilijapopovic.github.io/unbeatable-xo-ai/",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
